external-crates/move/crates/move-compiler/tests/move_check/parser/hexstring_token_eof1.exp
error[E01008]: invalid hex string
  ┌─ tests/move_check/parser/hexstring_token_eof1.move:3:9
  │
3 │         x"
  │         ^^ Missing closing quote (") after byte string

error[E04007]: incompatible types
  ┌─ tests/move_check/parser/hexstring_token_eof1.move:4:1
  │
2 │     public fun foo(): vector<u8> {
  │                       ---------- Expected: 'vector<u8>'
3 │         x"
4 │ 
  │ ^
  │ 
  │ Invalid return expression
  │ Given: '()'

